# bevmnist

./: .gitignore  Cargo.toml  README.md  release.toml
.github/workflows/: ci.yml  release.yaml
assets/: README.md
src/: main.rs
wasm/: index.html
