[package]
name = "bevmnist"
version = "0.1.9-dev"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"

tract-onnx = "0.15"

bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render", "png"]  }

[features]
default = []
web = []

[profile.dev.package."*"]
opt-level = 3

# [profile.release]
# lto = true
# opt-level = 3
# incremental = false
# codegen-units = 1
