[package]
name = "bevmnist"
version = "0.1.9"
authors = ["François Mockers <mockersf@gmail.com>"]
edition = "2021"
license = "MIT"
publish = false

[dependencies]
anyhow = "1.0"

tract-onnx = "0.16"

bevy = { version = "0.6", default-features = false, features = ["bevy_winit", "render", "png"]  }

[target.'cfg(target_os = "linux")'.dependencies]
bevy = { version = "0.6", default-features = false, features = [
  "x11",
] }


[features]
default = []
web = []

[profile.dev.package."*"]
opt-level = 3
